tests/fixtures/invalid/void_typedef_alias.c
typedef void Void;
int main(void) { return 0; }
